# bohdalka

./: .gitignore  001_stazeni_bohdalky.py  002_stazeni_spoluherectva.py  003_scrapovani.py  100_explorace.py  101_delka_karier.py  102_hlavni_vedlejsi_role.py  901_delka_karier.py  902_hlavni_vedlejsi_role.py  903_kariera.py  904_cervi_dira.py  main.py  pyproject.toml
