[project]
name = "bohdalka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "marimo>=0.23.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "polars>=1.40.0",
    "requests>=2.33.1",
]
